--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "carshop",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://github.com/Bidhan33/car-shop.git",
+  "homepage": "https://Bidhan33.github.io/car-shop",
   "type": "module",
   "scripts": {
     "dev": "vite",
